share with with view model

--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -17,5 +17,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ok" />
-
+    <Button
+        android:id="@+id/button_share_view_model"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Share using view model" />
 </LinearLayout>
